[gd_scene load_steps=3 format=3 uid="uid://dr7a12spcu6a"]

[ext_resource type="Texture2D" uid="uid://lxmq5y1h5v63" path="res://assets/furniture/kitchenCabinet_SE.png" id="1_ipt2o"]
[ext_resource type="Script" path="res://source/stations/counter/area.gd" id="2_rtaxm"]

[node name="Counter" type="StaticBody2D"]
y_sort_enabled = true

[node name="CounterSprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_ipt2o")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.00336, 1)
polygon = PackedVector2Array(-1, -20, 31, 2, -1, 25, -30, 3)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false
script = ExtResource("2_rtaxm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-4, -4)
polygon = PackedVector2Array(6, 34, 28, 18, 36, 27, 15, 43)

[node name="PlacedItems" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
